[JBWS-3780] Drop AS 7.2.0 container integration