@@ -625,106 +625,6 @@
     </profile>
 
     <!--
-    Name:  jboss720
-    Descr: JBoss-7.2.0 specific options
-    -->
-    <profile>
-      <id>jboss720</id>
-      <properties>
-        <jboss.version>${jboss720.version}</jboss.version>
-        <jbossws.integration.target>jboss720</jbossws.integration.target>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>org.jboss.ws</groupId>
-          <artifactId>jbossws-jboss720-tests-integration</artifactId>
-        </dependency>
-        <!-- LittleProxy depencency declared in this profile as other profiles require different exclusions -->
-        <dependency>
-          <groupId>org.littleshoot</groupId>
-          <artifactId>littleproxy</artifactId>
-          <version>${org.littleshoot.littleproxy.version}</version>
-          <exclusions>
-            <exclusion>
-              <groupId>org.slf4j</groupId>
-              <artifactId>slf4j-api</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>org.slf4j</groupId>
-              <artifactId>slf4j-log4j12</artifactId>
-            </exclusion>
-            <exclusion>
-              <groupId>net.sf.ehcache</groupId>
-              <artifactId>ehcache-core</artifactId>
-            </exclusion>
-          </exclusions>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <compilerArguments>
-                <endorseddirs>${project.build.directory}/endorsed</endorseddirs>
-              </compilerArguments>
-            </configuration>
-          </plugin>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <argLine>${surefire.jvm.args} ${surefire.jvm.management.args} ${surefire.default-mgmt-serurity.args} -Djava.endorsed.dirs=${project.build.directory}/endorsed</argLine>
-              <excludes>
-                 <!--# [CXF-1519] Explicitly set the namespace of a WebFault-->
-                 <exclude>org/jboss/test/ws/jaxws/jbws1904/**</exclude>
-
-                 <!--# [CXF-2006] RespectBinding feature and not understood required extensibility elements-->
-                 <exclude>org/jboss/test/ws/jaxws/jbws2449/**</exclude>
-
-                 <!--# [JBWS-2561] XOP request not properly inlined-->
-                 <exclude>org/jboss/test/ws/jaxws/samples/xop/doclit/XOPHandlerTestCase.*</exclude>
-
-                 <!--# [JBWS-2480] Soap attachments are dropped on server response-->
-                 <exclude>org/jboss/test/ws/jaxws/jbws1283/**</exclude>
-
-                 <!-- # Tests migrated from JBossWS-Native specific testsuite which are meant to pass with JBossWS-CXF too, but are still to be fixed -->
-                 <exclude>org/jboss/test/ws/jaxws/jbws2978/**</exclude>
-
-                 <!-- # [PLFED-390] PicketLink STS chokes on WS-Policy 1.5 tags -->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/trust/WSTrustPicketLinkTestCase*</exclude>
-
-                 <!--# [AS7-537] Fixed on AS 8 or greater -->
-                 <exclude>org/jboss/test/ws/jaxws/cxf/noIntegration/AS7537TestCase**</exclude>
-
-                 <!--# [JBWS-3560] fastinfoset module is required in as720  -->
-                 <exclude>org/jboss/test/ws/jaxws/cxf/fastinfoset/FastInfosetTestCase*</exclude>
-
-                 <!--# [WFLY-308] Provide facility for running ejb3 ws endpoints authorization independently  -->
-                 <exclude>org/jboss/test/ws/jaxws/handlerauth/HandlerAuthTestCase*</exclude>
-
-                 <!-- Manually setup KDC before run this test-->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/kerberos/*TestCase*</exclude>
-
-                 <!--There is no jbossws-cxf-jaspi installed in as720-->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/jaspi/Jaspi*TestCase*</exclude>
-                 
-                 <!-- [JBWS-3773][CXF-5602] HttpServletRequestSnapshot is not created for requests with WSA ReplyTo prop set -->
-                 <exclude>org/jboss/test/ws/jaxws/cxf/jbws3773/**</exclude>
-
-                 <!-- [WELD-1328] @WebServiceRef injection not working w/ Weld 1.x -->
-                 <exclude>org/jboss/test/ws/jaxws/cxf/jbws3679/**</exclude>
-
-                 <!-- [JBWS-3686] Restore WSTrustActAsTestCase and WSTrustOnBehalfOfTestCase -->
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/trust/WSTrustActAsTestCase.*</exclude>
-                 <exclude>org/jboss/test/ws/jaxws/samples/wsse/policy/trust/WSTrustOnBehalfOfTestCase.*</exclude>
-              </excludes>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!--
     Name:  wildfly800
     Descr: WildFly-8.0.0 specific options
     -->
